--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>TinCorgs</title>
-  <!-- The order of the code matters! Move custom styles.css below bootstrap -->
+  <!-- The order of the code matters! -->
 
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
